Fixed a test that was no longer correct Added the editor permission to a_users_and_groups.yml. This is the permission you use to make a group a candidate for receiving edit privileges at some point in the tree
git-svn-id: http://svn.apostrophenow.org/sandboxes/asandbox/trunk@2018 c89fab08-2f9b-42bf-8176-bd3ad6bee547

--- a/data/fixtures/a_users_and_groups.yml
+++ b/data/fixtures/a_users_and_groups.yml
@@ -51,6 +51,9 @@ sfGuardPermission:
   sfGuardPermission_guest:
     name: guest
     description: 'Guest permission'
+  sfGuardPermission_editor:
+    name: editor
+    description: 'For groups that will be given edit permissions at some point in the site'
   sfGuardPermission_cms_admin:
     name: cms_admin
     description: 'Executive control of the CMS'
