--- a/apps/frontend/config/app.yml
+++ b/apps/frontend/config/app.yml
@@ -160,7 +160,9 @@ all:
     indexes:
       - 'aPage'
       - 'aMediaItem'
-      
+  
+  aEvents:
+    display_calendar: true    
   # options for sfSyncContentPlugin, used to sync the database and also
   # data files such as the media plugin's images and the search indexes. 
   # You can extend this if you have more data file folders
