--- a/apps/frontend/config/app.yml
+++ b/apps/frontend/config/app.yml
@@ -132,15 +132,15 @@ all:
     
    ## Uncomment below to disable the styles for that section
     # use_bundled_stylesheets:
-       # buttons: false
-       # utility: false
-       # forms: false
-       # navigation: false
-       # components: false
-       # area-slots: false
-       # engines: false
        # admin: false
+       # forms: false
+       # components: false
+       # engines: false
+       # navigation: false
+       # area-slots: false
+       # buttons: false
        # colors: false
+       # utility: false       
       
     # We're using it as the sitewide layout instead (see view.yml)
     use_bundled_layout: false   
@@ -199,7 +199,8 @@ all:
 #  cli:
 #    host: cmstest14
 
-
+  aEvents:
+    display_calendar: true
 # In the production environment, we minify CSS and JS by default.
 # We'd like to gzip them too, but a lot of people don't have the
 # zlib extension in PHP. We encourage you to turn that on and see.
@@ -212,6 +213,6 @@ all:
 
 prod:
   a:
-    minify: true
-    minify_gzip: true
+    # minify: true
+    # minify_gzip: true
   
