--- a/apps/frontend/config/app.yml
+++ b/apps/frontend/config/app.yml
@@ -162,7 +162,7 @@ all:
       - 'aMediaItem'
   
   aEvents:
-    display_calendar: true    
+    display_calendar: false    
   # options for sfSyncContentPlugin, used to sync the database and also
   # data files such as the media plugin's images and the search indexes. 
   # You can extend this if you have more data file folders
