added a note about date_calc in app.yml for trunk
git-svn-id: http://svn.apostrophenow.org/sandboxes/asandbox/trunk@2065 c89fab08-2f9b-42bf-8176-bd3ad6bee547

--- a/apps/frontend/config/app.yml
+++ b/apps/frontend/config/app.yml
@@ -200,7 +200,8 @@ all:
 #    host: cmstest14
 
   aEvents:
-    display_calendar: true
+    display_calendar: true # PEAR Date_Calc must be installed to use the calendar
+    
 # In the production environment, we minify CSS and JS by default.
 # We'd like to gzip them too, but a lot of people don't have the
 # zlib extension in PHP. We encourage you to turn that on and see.
