nevermind- calendar is on by default in 1.4 too
git-svn-id: http://svn.apostrophenow.org/sandboxes/asandbox/branches/1.4@2066 c89fab08-2f9b-42bf-8176-bd3ad6bee547

--- a/apps/frontend/config/app.yml
+++ b/apps/frontend/config/app.yml
@@ -162,7 +162,7 @@ all:
       - 'aMediaItem'
   
   aEvents:
-    display_calendar: false # PEAR Date_Calc must be installed to use the calendar
+    display_calendar: true # PEAR Date_Calc must be installed to use the calendar
     
         
   # options for sfSyncContentPlugin, used to sync the database and also
