if you remove all settings for:
prod:
  a:

Then you must comment out "a" otherwise you delete all settings that you thought were coming from the "all" section.



git-svn-id: http://svn.apostrophenow.org/sandboxes/asandbox/trunk@2083 c89fab08-2f9b-42bf-8176-bd3ad6bee547

--- a/apps/frontend/config/app.yml
+++ b/apps/frontend/config/app.yml
@@ -212,8 +212,11 @@ all:
 # the mainstream sandbox. We should always turn it on again when creating
 # our own client sites
 
+# WARNING: if you turn off all settings here for 'prod', COMMENT OUT the 
+# 'prod' and 'a' lines too or you will shut off ALL of your Apostrophe settings
+
 prod:
   a:
-    # minify: true
-    # minify_gzip: true
+    minify: true
+    minify_gzip: true
   
