added app.yml hook to enable/disable Staging DO NOT EDIT message
git-svn-id: http://svn.apostrophenow.org/sandboxes/asandbox/trunk@2148 c89fab08-2f9b-42bf-8176-bd3ad6bee547

--- a/apps/frontend/config/app.yml
+++ b/apps/frontend/config/app.yml
@@ -150,6 +150,8 @@ all:
       aEvent: Events
       aMedia: Media
 
+    # do_not_edit: true   # Quickly and easily display the 'Do Not Edit' message on staging sites after launch.
+      
   aAdmin:
     web_dir: /apostrophePlugin
 
