1. view.yml did not include the asandbox site.js 2. updated the default and home templates to include consistently the same slots in the same order with the same options/parameters 3. main.css adjustment 4. added simple site.js enhancement to make the navigation fade in and out instead of simply :hover. It looks sexy
git-svn-id: http://svn.apostrophenow.org/sandboxes/asandbox/trunk@2215 c89fab08-2f9b-42bf-8176-bd3ad6bee547

--- a/apps/frontend/config/view.yml
+++ b/apps/frontend/config/view.yml
@@ -13,6 +13,7 @@ default:
     - main.css: { position: last }
   
   javascripts:
+    - site.js: { position: last }
 
   has_layout:     true
   layout:         layout
