--- a/apps/frontend/config/settings.yml
+++ b/apps/frontend/config/settings.yml
@@ -70,6 +70,7 @@ all:
       - aButtonSlot
       - aPDFSlot
       - aFeedSlot
+      - aAudioSlot
       - sfGuardAuth
       - aUserAdmin
       - aGroupAdmin
