New categories top level admin button Removed old blog category admin module Added new category admin module Specifcally enable desired plugins in correct order, otherwise extending schemas does not work Many new, modified and removed Doctrine classes. Cleanup of those no longer necessary continues
git-svn-id: http://svn.apostrophenow.org/sandboxes/asandbox/trunk@2268 c89fab08-2f9b-42bf-8176-bd3ad6bee547

--- a/apps/frontend/config/app.yml
+++ b/apps/frontend/config/app.yml
@@ -9,6 +9,7 @@ all:
       - blog
       - events
       - media
+      - categories
       - users 
       - reorganize
     # If true, there will be a language switcher next to the login/logout button
