Offer up the new file slot, don't offer up the PDF slot in the sandbox project (although it is still supported)
Removed lots of obsolete project level Doctrine classes



git-svn-id: http://svn.apostrophenow.org/sandboxes/asandbox/trunk@2282 c89fab08-2f9b-42bf-8176-bd3ad6bee547

--- a/apps/frontend/config/settings.yml
+++ b/apps/frontend/config/settings.yml
@@ -69,6 +69,7 @@ all:
       - aImageSlot
       - aButtonSlot
       - aPDFSlot
+      - aFileSlot
       - aFeedSlot
       - aAudioSlot
       - sfGuardAuth
