--- a/apps/frontend/config/app.yml
+++ b/apps/frontend/config/app.yml
@@ -12,6 +12,9 @@ all:
       - categories
       - users 
       - reorganize
+    
+    persistent_global_toolbar: true # false if you want to hide the global toolbar to logged-out visitors
+    
     # If true, there will be a language switcher next to the login/logout button
     i18n_switch: true
     i18n_languages: [en, fr, de, es, ru]
