--- a/apps/frontend/config/app.yml
+++ b/apps/frontend/config/app.yml
@@ -1,6 +1,14 @@
 # default values
 all:
   a:
+    vimeo:
+      # We use this to bring in our own vimeo key, you need to go get your own:
+      # http://vimeo.com/api/applications/new
+      # You can remove this line:
+      <?php if (file_exists(dirname(__FILE__) . '/punk-demo-vimeo.yml')) require dirname(__FILE__) . '/punk-demo-vimeo.yml' ?>
+      # Uncomment these and plug in your information after you get your key from vimeo
+      # oauthConsumerKey: your_key_from_vimeo
+      # oauthConsumerSecret: your_secret_from_vimeo
     # includes a.css into the project
     use_bundled_stylesheet: true
     
@@ -207,7 +215,7 @@ all:
 #    host: cmstest14
 
   aEvents:
-    display_calendar: true # PEAR Date_Calc must be installed to use the calendar
+    display_calendar: true 
     
 # In the production environment, we minify CSS and JS by default.
 # We'd like to gzip them too, but a lot of people don't have the
