--- a/apps/frontend/config/app.yml
+++ b/apps/frontend/config/app.yml
@@ -221,10 +221,8 @@ all:
   # Once you have a Disqus account, enable comments and put in your Disqus shortname
   
   # aBlog:
-    # comments: true
-    # disqus_enabled: true
-    # disqus_shortname: yourdisqusshortname
-    # disqus_devmode: true
+  #   disqus_enabled: true
+  #   disqus_shortname: apostrophenowdemosite
     
 # In the production environment, we minify CSS and JS by default.
 # We'd like to gzip them too, but a lot of people don't have the
