Updated asandbox generator.yml for tagAdmin
git-svn-id: http://svn.apostrophenow.org/sandboxes/asandbox/trunk@2373 c89fab08-2f9b-42bf-8176-bd3ad6bee547

--- a/apps/frontend/modules/aTagAdmin/config/generator.yml
+++ b/apps/frontend/modules/aTagAdmin/config/generator.yml
@@ -15,11 +15,11 @@ generator:
 
       list:
         title: Tags Admin
-        display: [ =name, tag_aBlog, tag_aEvent, tag_aMediaItem, tag_aPage ]
+        display: [ =name, tag_aBlogPost, tag_aEvent, tag_aMediaItem, tag_aPage ]
         fields:
           name:
             label: Tag
-          tag_aBlog:
+          tag_aBlogPost:
             label: Blog
           tab_aEvent:
             label: aEvent
