* Overrode default sfGuard routes for login/logout to be the same as before the guard plugin upgrade * Enabled "forgot password" feature of new guard plugin in /login, needs styling (didn't put a link to it in the little login form though, John please address that) * Included both photo slideshow and auto slideshow in our sample page templates * Committed autogenerated stuff
git-svn-id: http://svn.apostrophenow.org/sandboxes/asandbox/trunk@2426 c89fab08-2f9b-42bf-8176-bd3ad6bee547

--- a/apps/frontend/config/app.yml
+++ b/apps/frontend/config/app.yml
@@ -1,5 +1,10 @@
 # default values
 all:
+  sf_guard_plugin:
+    # We register our own URLs that we like better.
+    # Also we don't use the default admin gen modules
+    # (Apostrophe comes with a more convenient set)
+    routes_register: false
   a:
     vimeo:
       # We use this to bring in our own vimeo key, you need to go get your own:
@@ -108,6 +113,27 @@ all:
         useTitleAsButtonText:
           label: Text Over
       aSlideshow:
+        normal:
+          label: Normal
+          options:
+            interval: 0
+            title: false
+            arrows: true
+        compact:
+          label: Compact
+          options:
+            interval: 0
+            title: true
+            arrows: true
+            itemTemplate: slideshowItemCompact
+        autoplay:
+          label: Auto Play
+          options:
+            interval: 4
+            title: true
+            arrows: false         
+            itemTemplate: slideshowItemCompact            
+      aSmartSlideshow:
         normal:
           label: Normal
           options:
