Typo fix Autogenerated stuff
git-svn-id: http://svn.apostrophenow.org/sandboxes/asandbox/trunk@2516 c89fab08-2f9b-42bf-8176-bd3ad6bee547

--- a/apps/frontend/config/routing.yml
+++ b/apps/frontend/config/routing.yml
@@ -33,7 +33,7 @@ sf_guard_forgot_password_change:
 default:
   url:   /admin/:module/:action/*
 
-# A homepage rule is expected by a and various other plugins,
+# A homepage rule is expected by Apostrophe and various other plugins,
 # so be sure to have one
 
 homepage:
