I turned off filters for Tags at the project level because they are worthless.
If we want tag filters we will have to design and build something custom



git-svn-id: http://svn.apostrophenow.org/sandboxes/asandbox/trunk@2564 c89fab08-2f9b-42bf-8176-bd3ad6bee547

--- a/apps/frontend/modules/aTagAdmin/config/generator.yml
+++ b/apps/frontend/modules/aTagAdmin/config/generator.yml
@@ -32,27 +32,16 @@ generator:
         object_actions: []
         actions:
           new:
-            label: New Tag
+            label: <span class="icon"></span> New Tag
             action: new
             params:
-              class: a-btn big icon a-add alt
+              class: a-btn big icon a-add
 
-      form:
-        # When you use these you break the addition of new categorizable types in new plugins,
-        # including the blog plugin. See PluginaCategoryForm for the right approach to limiting
-        # this with useFields while still including the checkboxes for new types of categorizable stuff
-
-        # fields:   [ name, groups_list, users_list ]
-        # display:  [ name, groups_list, users_list ]
-
-
+      form: 
+        class: aTagForm
+        
       filter:
-        # When you use these you break the addition of new categorizable types in new plugins,
-        # including the blog plugin. See PluginaCategoryFormFilter for the right approach to limiting
-        # this with useFields while still including the filters for new types of categorizable stuff
-
-        # fields:  [  groups_list, users_list ]
-        # display: [  groups_list, users_list ]
+        class: false
 
       edit:
         title: Edit Tag
