Apostrophe 1.5 sandbox is now ready for use, with externals pointing to the 1.5 branches of apostrophePlugin and apostropheBlogPlugin. Note that gzip of fixtures is turned off in app.yml even for production because the average webmaster doesn't have support for gzipped files turned on in Apache and might not have the gzip extension in PHP either. It is a great feature but we can't force it on folks!
git-svn-id: http://svn.apostrophenow.org/sandboxes/asandbox/branches/1.5@2615 c89fab08-2f9b-42bf-8176-bd3ad6bee547

--- a/apps/frontend/config/app.yml
+++ b/apps/frontend/config/app.yml
@@ -257,5 +257,8 @@ all:
 prod:
   a:
     minify: true
-    minify_gzip: true
+    # Disabled gzip for now to avoid problems for people who
+    # don't have the zlib extension or haven't set up Apache to
+    # know what to do with the gzipped files
+    minify_gzip: false
   
