--- a/apps/frontend/config/app.yml
+++ b/apps/frontend/config/app.yml
@@ -6,6 +6,10 @@ all:
     # (Apostrophe comes with a more convenient set)
     routes_register: false
   a:
+    
+    pager:
+      nb_links: 5
+    
     vimeo:
       # We use this to bring in our own vimeo key, you need to go get your own:
       # http://vimeo.com/api/applications/new
@@ -240,7 +244,7 @@ all:
   # aBlog:
   #   disqus_enabled: true
   #   disqus_shortname: yourshortnamehere
-    
+      
 # In the production environment, we minify CSS and JS by default.
 # We'd like to gzip them too, but a lot of people don't have the
 # zlib extension in PHP. We encourage you to turn that on and see.
