added pager link numbers
git-svn-id: http://svn.apostrophenow.org/sandboxes/asandbox/branches/1.5@2646 c89fab08-2f9b-42bf-8176-bd3ad6bee547

--- a/apps/frontend/config/app.yml
+++ b/apps/frontend/config/app.yml
@@ -7,8 +7,7 @@ all:
     routes_register: false
   a:
     
-    pager:
-      nb_links: 5
+    pager_nb_links: 5
     
     vimeo:
       # We use this to bring in our own vimeo key, you need to go get your own:
