CSS for Sidebar for Blog/Media/Events
git-svn-id: http://svn.apostrophenow.org/sandboxes/asandbox/branches/1.5@2867 c89fab08-2f9b-42bf-8176-bd3ad6bee547

--- a/data/fixtures/demo_admin_user.yml
+++ b/data/fixtures/demo_admin_user.yml
@@ -9,14 +9,14 @@ sfGuardUser:
     password: demo
     first_name: Super
     last_name: Admin
-    email_address: superadmin@notavalidaddress
+    email_address: superadmin@apostrophe
     is_super_admin: true
   sgu_admin:
     username: admin
     password: demo
     first_name: Normal
     last_name: Admin
-    email_address: admin@notavalidaddress
+    email_address: admin@apostrophe
 sfGuardUserGroup:
   sgug_admin_admin:
     User: sgu_admin
