Removed settings intended for a short-lived approach to templating engines- the correct settings are in app_a_templates already
git-svn-id: http://svn.apostrophenow.org/sandboxes/asandbox/branches/1.5@2939 c89fab08-2f9b-42bf-8176-bd3ad6bee547

--- a/apps/frontend/config/app.yml
+++ b/apps/frontend/config/app.yml
@@ -233,19 +233,7 @@ all:
   aEvents:
     display_calendar: true 
   
-  aBlog:
-    # Blog page templates load alternate templates for the index and show actions.
-    # The "default" template uses indexSuccess.php and showSuccess.php (per the Symfony standard and
-    # the behavior of Apostrophe 1.4). The "alternate" template loads
-    # indexAlternate.php and showAlternate.php. You may add as many alternative templates
-    # as you wish
-    page_templates: 
-      # You must have a blog page template named 'default'. It is used if
-      # an existing blog page has no template setting or has an obsolete
-      # template setting
-      default: 'Default'
-      alternate: 'Alternate'
-
+  # aBlog:
     # Disqus Comments
     # Once you have a Disqus account, enable comments and put in your Disqus shortname
     # disqus_enabled: true
