Disabled variants samples temporarily. We will create new updated variant samples when we're not developing so much.
Updated some CSS in the sandbox to re-scope them after the a-ui reset




git-svn-id: http://svn.apostrophenow.org/sandboxes/asandbox/branches/1.5@3022 c89fab08-2f9b-42bf-8176-bd3ad6bee547

--- a/apps/frontend/config/app.yml
+++ b/apps/frontend/config/app.yml
@@ -104,48 +104,48 @@ all:
       #
       # (This assumes you have implemented such a slot type of course.)
       
-    slot_variants:
-      aSlideshow:
-        normal:
-          label: Normal
-          options:
-            interval: 0
-            title: false
-        compact:
-          label: Compact
-          options:
-            interval: 0
-            title: true
-            arrows: true
-            itemTemplate: slideshowItemCompact
-        autoplay:
-          label: Auto Play
-          options:
-            interval: 4
-            title: true
-            arrows: false         
-            itemTemplate: slideshowItemCompact            
-      aSmartSlideshow:
-        normal:
-          label: Normal
-          options:
-            interval: 0
-            title: false
-            arrows: true
-        compact:
-          label: Compact
-          options:
-            interval: 0
-            title: true
-            arrows: true
-            itemTemplate: slideshowItemCompact
-        autoplay:
-          label: Auto Play
-          options:
-            interval: 4
-            title: true
-            arrows: false         
-            itemTemplate: slideshowItemCompact            
+    # slot_variants:
+    #   aSlideshow:
+    #     normal:
+    #       label: Normal
+    #       options:
+    #         interval: 0
+    #         title: false
+    #     compact:
+    #       label: Compact
+    #       options:
+    #         interval: 0
+    #         title: true
+    #         arrows: true
+    #         itemTemplate: slideshowItemCompact
+    #     autoplay:
+    #       label: Auto Play
+    #       options:
+    #         interval: 4
+    #         title: true
+    #         arrows: false         
+    #         itemTemplate: slideshowItemCompact            
+    #   aSmartSlideshow:
+    #     normal:
+    #       label: Normal
+    #       options:
+    #         interval: 0
+    #         title: false
+    #         arrows: true
+    #     compact:
+    #       label: Compact
+    #       options:
+    #         interval: 0
+    #         title: true
+    #         arrows: true
+    #         itemTemplate: slideshowItemCompact
+    #     autoplay:
+    #       label: Auto Play
+    #       options:
+    #         interval: 4
+    #         title: true
+    #         arrows: false         
+    #         itemTemplate: slideshowItemCompact            
             
     home_as_tab: false
 
