--- a/apps/frontend/config/app.yml
+++ b/apps/frontend/config/app.yml
@@ -10,13 +10,18 @@ all:
     pager_nb_links: 5
     
     vimeo:
-      # We use this to bring in our own vimeo key, you need to go get your own:
-      # http://vimeo.com/api/applications/new
+      # We use this to bring in our own vimeo key, you need to go get your own
       # You can remove this line (P'unks, DO NOT indent this line):
 <?php if (file_exists(dirname(__FILE__) . '/punk-demo-vimeo.yml')) require dirname(__FILE__) . '/punk-demo-vimeo.yml' ?>
       # Uncomment these and plug in your information after you get your key from vimeo
       # oauthConsumerKey: your_key_from_vimeo
       # oauthConsumerSecret: your_secret_from_vimeo
+
+    viddler:
+      # We use this to bring in our own viddler key, you need to go get your own
+      # You can remove this line (P'unks, DO NOT indent this line):
+<?php if (file_exists(dirname(__FILE__) . '/punk-demo-viddler.yml')) require dirname(__FILE__) . '/punk-demo-viddler.yml' ?>
+      # Uncomment these and plug in your information after you get your key from viddler
 
     # includes apostrophe css into the project
     use_bundled_stylesheet: true
