removed alternate blog layout examples because it's just more code base to maintain
git-svn-id: http://svn.apostrophenow.org/sandboxes/asandbox/branches/1.5@3085 c89fab08-2f9b-42bf-8176-bd3ad6bee547

--- a/apps/frontend/config/app.yml
+++ b/apps/frontend/config/app.yml
@@ -164,8 +164,7 @@ all:
       aMedia:
         default: Media
       aBlog:
-        default: Standard Blog
-        alternate: Alternate Blog
+        default: Blog
       aEvent:
         default: Events
 
