--- a/apps/frontend/config/app.yml
+++ b/apps/frontend/config/app.yml
@@ -160,8 +160,7 @@ all:
       aMedia:
         default: Media
       aBlog:
-        default: Standard Blog
-        alternate: Alternate Blog
+        default: Blog
       aEvent:
         default: Events
 
