--- a/apps/frontend/config/app.yml
+++ b/apps/frontend/config/app.yml
@@ -62,7 +62,13 @@ all:
     # group membership do not. If you want to give people "off the street" accounts,
     # this is a useful way to avoid giving them access to locked pages until they
     # are deemed worthy of membership in the guest group. If you comment out
-    # this line, any authenticated user will be able to view locked pages
+    # this line, any authenticated user will be able to view locked pages.
+    
+    # Beginning in 1.5, this credential is sufficient to view pages that are
+    # locked to "editors and guests," and a prerequisite to view pages that
+    # are locked to specific individuals or groups. It is a prerequisite because
+    # otherwise you have no way to remove a privilege from someone who has been
+    # stripped of this permission
     view_locked_sufficient_credentials: view_locked
     
     # Sets the level of CMS Pages allowed to be created by the client 
