--- a/data/fixtures/pages.yml
+++ b/data/fixtures/pages.yml
@@ -41,7 +41,8 @@ aPage:
                 permid: 1
                 Slot:
                   type: aRichText 
-                  value: '<h3>Welcome to aSandbox, a sample site built using <a href="http://www.apostrophenow.com" target="_new">Apostrophe</a>.</h3> <p>You can edit this text by clicking the Edit button. You can also add additional slots to this area, such as video and slideshow slots, via the Add Slot button.</p>'
+                  value: >
+                    <h3>Welcome to aSandbox, a sample site built using <a href="http://www.apostrophenow.com" target="_new">Apostrophe</a>.</h3> <p>You can edit this text by clicking the Edit button. You can also add additional slots to this area, such as video and slideshow slots, via the Add Slot button.</p>
       home_fr_body:
         name: body 
         culture: fr
@@ -104,7 +105,8 @@ aPage:
                     permid: 1
                     Slot:
                       type: aRichText 
-                      value: '<h3>Learn more about <a href="http://www.apostrophenow.com" target="_new">Apostrophe</a>.</h3> It is open source, robust, &amp; super easy to use!'
+                      value: >
+                        <h3>Learn more about <a href="http://www.apostrophenow.com" target="_new">Apostrophe</a>.</h3> It is open source, robust, &amp; super easy to use!
           about_fr_body:
             name: body 
             culture: fr
@@ -258,7 +260,8 @@ aPage:
                         permid: 1
                         Slot:
                           type: aRichText
-                          value: '<h2>Error 404 &mdash; The page you are looking for could not be found.</h2><h3><a href="/">Go Home.</a></h3>'
+                          value: >
+                            <h2>Error 404 &mdash; The page you are looking for could not be found.</h2><h3><a href="/">Go Home.</a></h3>
       contact:
         slug: "/contact"
         template: default
@@ -301,7 +304,8 @@ aPage:
                     permid: 1
                     Slot:
                       type: aRichText 
-                      value: '<h3>For more information or help with <a href="http://www.apostrophenow.com" target="_new">Apostrophe</a>, contact <a href="mailto:apostrophe@punkave.com">apostrophe@punkave.com</a></h3>'
+                      value: >
+                        <h3>For more information or help with <a href="http://www.apostrophenow.com" target="_new">Apostrophe</a>, contact <a href="mailto:apostrophe@punkave.com">apostrophe@punkave.com</a></h3>
           contact_fr_body:
             name: body 
             culture: fr
@@ -317,4 +321,21 @@ aPage:
                       value: >
                         <h3>Pour plus d'informations ou obtenir de l'aide au sujet 
                         d'<a href="http://www.apostrophenow.com" target="_new">Apostrophe</a>, 
-                        contactez <a href="mailto:apostrophe@punkave.com">apostrophe@punkave.com</a></h3>
+                        contactez <a href="mailto:apostrophe@punkave.com">apostrophe@punkave.com</a></h3>                        
+  a_errors_media:
+    slug: "aErrors:aMedia"
+    Areas:
+      a_errors_media_en_body:
+        name: body 
+        culture: en
+        latest_version: 1
+        AreaVersions:
+          a_errors_media_en_body_version_1:
+            version: 1
+            AreaVersionSlots:
+              a_errors_media_en_body_version_1_permid_1:
+                permid: 1
+                Slot:
+                  type: aRichText 
+                  value: >
+                    <h3> Oops! You do not have anything in your media library.<br /> Do you want to <a id="a-upload-some-images" href="#upload-images">add some media?</a></h3>
