pages.yml for sandbox
git-svn-id: http://svn.apostrophenow.org/sandboxes/asandbox/branches/1.5@3108 c89fab08-2f9b-42bf-8176-bd3ad6bee547

--- a/data/fixtures/pages.yml
+++ b/data/fixtures/pages.yml
@@ -322,8 +322,11 @@ aPage:
                         <h3>Pour plus d'informations ou obtenir de l'aide au sujet 
                         d'<a href="http://www.apostrophenow.com" target="_new">Apostrophe</a>, 
                         contactez <a href="mailto:apostrophe@punkave.com">apostrophe@punkave.com</a></h3>                        
+  # This is a virtual page that contains the default error message for media when there are no media items.
+  # The message is an admin editable richtext slot.  
   a_errors_media:
     slug: "aErrors:aMedia"
+    admin: true
     Areas:
       a_errors_media_en_body:
         name: body 
