Fix for #866. We've had a published_at field for pages for some time but it was not in the fixtures files. This can cause a variety of problems. Changes to navigation today may have made it more conspicuous although the code suggests it would have been a problem before too - I've been enforcing published_at for navigation for a while, or at least intending to. Sounds like we haven't been loading demo15 from fixtures very much
Beginning with Apostrophe 1.5 fixtures for pages must have a published_at field with a valid MySQL datetime



git-svn-id: http://svn.apostrophenow.org/sandboxes/asandbox/branches/1.5@3116 c89fab08-2f9b-42bf-8176-bd3ad6bee547

--- a/data/fixtures/pages.yml
+++ b/data/fixtures/pages.yml
@@ -1,6 +1,10 @@
+# We need published_at to have a reasonable default setting otherwise everything is hidden
+# <?php $now = date('Y-m-d H:i:s') ?>
+
 aPage:
   home:
     slug: "/"
+    published_at: '<?php echo $now ?>'
     template: home
     Areas:
       home_en_title:
@@ -65,6 +69,7 @@ aPage:
     children:
       about:
         slug: "/about"
+        published_at: '<?php echo $now ?>'
         template: default
         Areas:
           about_en_title:
@@ -124,6 +129,7 @@ aPage:
                         Une solution open source, robuste et extrêmement simple à utiliser!
       blog:
         slug: "/blog"
+        published_at: '<?php echo $now ?>'
         engine: aBlog
         Areas:
           blog_en_title:
@@ -142,6 +148,7 @@ aPage:
       
       events:
         slug: "/events"
+        published_at: '<?php echo $now ?>'
         engine: aEvent
         Areas:
           events_en_title:
@@ -162,6 +169,7 @@ aPage:
         # By convention this page is the parent of all admin pages. Admin pages are
         # hidden from all normal navigation
         slug: "/admin"
+        published_at: '<?php echo $now ?>'
         template: default
         admin: true
         # The admin engine has an index action that redirects to the home page, for now
@@ -196,6 +204,7 @@ aPage:
         children:          
           media:
             slug: "/admin/media"
+            published_at: '<?php echo $now ?>'
             template: default
             engine: aMedia
             # The default media engine page is not visible to logged-out users. You can
@@ -230,6 +239,7 @@ aPage:
                           value: "Média"
           error404:
             slug: "/admin/error404"
+            published_at: '<?php echo $now ?>'
             template: error404
             # The default media engine page is not visible to logged-out users. You can
             # introduce other instances of it that are
@@ -264,6 +274,7 @@ aPage:
                             <h2>Error 404 &mdash; The page you are looking for could not be found.</h2><h3><a href="/">Go Home.</a></h3>
       contact:
         slug: "/contact"
+        published_at: '<?php echo $now ?>'
         template: default
         Areas:
           contact_en_title:
